coacht.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 2454,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.83,
  "homepage_snapshot_redirected_domain": "coacht.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020602165347id_/http://www.coacht.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020602165347id_/http%3A//coacht.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "coacht.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602123305id_/http%3A//www.coacht.com/story.cfm%3Fdoc%3D36",
  "policy_title": "CoachT.com - Privacy Statement for coacht.com",
  "policy_url": "coacht.com/story.cfm?doc=36",
  "sha1": "7309f808003d8633ec8df039ab759dc23b945088",
  "simhash": 17275294840606883218,
  "simhash_updated": false,
  "site_hostname": "coacht.com",
  "site_url": "http://coacht.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020602123305",
  "word_count": 396,
  "year": 2002
}

--- a/c/co/coa/coacht.com.html
+++ b/c/co/coa/coacht.com.html
@@ -1,84 +1,88 @@
-<!--The following is the downloaded HTML source of the coacht.com privacy policy that was archived on 2001-11-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011101051918id_/http%3A//www.coacht.com/story.cfm%3Fdoc%3D36) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coacht.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602123305id_/http%3A//www.coacht.com/story.cfm%3Fdoc%3D36) for the most accurate reproduction.-->
 
 <html><head>
   <title>CoachT.com - Privacy Statement for coacht.com</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <meta name="description" content="The most complete coverage of Tennessee High School Sports on the Internet.">
+	<meta name="Keywords" content="tennessee, high school, high, school, prep, sports, basketball, football, baseball, wrestling, aau, nike, coach, t, tssaa, rankings">
   <basefont face="VERDANA" color="Black">
 </head>
 
-<body bgcolor="White" onload="" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" text="Black" link="Blue" vlink="Navy" alink="Gray">
+<body bgcolor="#FFFFFF" onload="" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" text="#000000" link="#0000FF" vlink="#000080" alink="#808080">
 
 <table border="0" cellpadding="0" cellspacing="0" width="695">
-  <tbody><tr valign="top"><!-- row 1 -->
-   <td colspan="4"><img name="coacht_r1_c1" src="http://www.coacht.com/coacht_r1_c1.gif" width="695" height="7" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="1" height="7" border="0"></td>
-  </tr>
-  <tr valign="top"><!-- row 2 -->
-   <td rowspan="4"><a href="/"><img name="coacht_r2_c1" src="http://www.coacht.com/coacht_r2_c1.gif" width="212" height="94" border="0"></a></td>
-   <td colspan="2"><iframe src="http://www.coacht.com/adserve/display.cfm?width=468&amp;height=60&amp;top=1" width="468" height="60" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"> 
-	
-<a href="http://www.coacht.com/adserve/click.cfm?id=3"><img src="http://www.coacht.com/ads/sitespon-468.gif" border=0></a>
-</iframe></td>
-   <td rowspan="2"><img name="coacht_r2_c4" src="http://www.coacht.com/coacht_r2_c4.gif" width="15" height="68" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="1" height="60" border="0"></td>
-  </tr>
-  <tr valign="top"><!-- row 3 -->
-   <td colspan="2"><img name="coacht_r3_c2" src="http://www.coacht.com/coacht_r3_c2.gif" width="468" height="8" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="1" height="8" border="0"></td>
-  </tr>
-  <tr valign="top"><!-- row 4 -->
-   <td><table width="100%" border="0" cellpadding="0" cellspacing="0" background="http://www.coacht.com/coacht_r4_c2.gif"><tbody><tr height="14"><td align="right" height="14"> <font face="Verdana" color="White" size="-2">Thursday, November 1&nbsp;&nbsp;</font></td></tr></tbody></table></td>
-   <td colspan="2"><img name="coacht_r4_c3" src="http://www.coacht.com/coacht_r4_c3.gif" width="25" height="14" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="1" height="14" border="0"></td>
-  </tr>
-  <tr valign="top"><!-- row 5 -->
-   <td colspan="3"><img name="coacht_r5_c2" src="http://www.coacht.com/coacht_r5_c2.gif" width="483" height="12" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="1" height="12" border="0"></td>
+  <tbody><tr>
+   <td rowspan="4"><a href="http://www.coacht.com/"><img src="http://www.coacht.com/images/head_r1_c1.gif" width="227" height="87" border="0"></a></td>
+   <td><img src="http://www.coacht.com/images/head_r1_c2.gif" width="468" height="1" border="0"></td>
   </tr>
   <tr>
-<!-- Shim row, height 1. -->
-   <td><img src="http://www.coacht.com/shim.gif" width="212" height="1" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="458" height="1" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="10" height="1" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="15" height="1" border="0"></td>
-   <td><img src="http://www.coacht.com/shim.gif" width="1" height="1" border="0"></td>
+   <td><iframe src="http://www.coacht.com/adserve/display.cfm?width=468&amp;height=60&amp;top=1&amp;iframe=1" width="468" height="60" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"> 
+
+		
+	<a href="http://www.coacht.com/adserve/click.cfm?id=2" target="_parent"><img src="http://www.coacht.com/ads/lfedbank-468.gif" border=0></a>
+</iframe></td>
+  </tr>
+  <tr>
+   <td align="right" valign="center" height="24"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="left" valign="center"><font face="Tahoma,Arial" size="-2">&nbsp;You are not <a href="http://www.coacht.com/boards/login.cfm">logged in</a>.
+</font></td><td align="center" valign="center"><font face="Tahoma,Arial" size="-2">Sunday, Jun 2</font></td><td align="right" valign="center"><font face="Tahoma,Arial" size="-2"><b>21</b> <a href="#" onclick="window.open('http://www.coacht.com/popup_membercount.html','membercount','width=225,height=275,directories=no,location=no,menubar=no,scrollbars=yes,status=no,toolbar=no,resizable=yes');return false">Members Online</a>&nbsp;&nbsp;</font></td><td align="right" width="74"><img src="http://www.coacht.com/images/head_r3_c3.gif" width="74" height="24" border="0"></td></tr></tbody></table></td>
+  </tr>
+  <tr>
+   <td><img src="http://www.coacht.com/images/head_r1_c2.gif" width="468" height="2" border="0"></td>
   </tr>
 </tbody></table>
 <table width="710" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr valign="top">
-  <td width="120"><center><a href="http://www.coacht.com/story.cfm?doc=364"><img src="http://coacht.com/gallery/pix/2001/pic3809.jpg" border="0"></a></center>
+  <td width="120"><center><a href="http://www.coacht.com/story.cfm?doc=3500">
+	
+	<img src="http://www.coacht.com/fanads/ad-grundyco.gif" border="0" alt="Grundy County" vspace="4"></a></center>
     <table width="120" border="0" cellspacing="0" cellpadding="3">
       <tbody><tr><td><font face="Verdana" size="-2"><hr width="100%" size="0" color="Navy" noshade="">
-        <b>CommuniT</b><br><font face="Tahoma" size="-2">
+        <b>Community</b><br><font face="Tahoma,Arial" size="-2">
 		&nbsp; <a href="http://www.coacht.com/">Home</a><br>
 		&nbsp; <a href="http://www.coacht.com/submit.cfm">Suggest Story</a><br>
         &nbsp; <a href="http://www.coacht.com/boards/">Message Boards</a><br>
         &nbsp; <a href="http://www.coacht.com/prospects/">Prospect Database</a><br>
-        &nbsp; <a href="http://www.coacht.com/thepoll/"><b>Top 20 Fan Poll</b></a><br>
+        &nbsp; <a href="http://www.coacht.com/prospects/signings.cfm">Prep Signees</a><br>
         &nbsp; <a href="http://www.coacht.com/gallery/">Photo Gallery</a><br>
-        &nbsp; <a href="http://www.coacht.com/schedules/">Schedules</a><br>
         &nbsp; <a href="http://www.coacht.com/studyhall/">Study Hall</a><br>
+        &nbsp; <a href="http://www.coacht.com/store/"><b>Store</b></a><br>
         &nbsp; <a href="http://www.coacht.com/chat/">Chat</a><br><br>
-        </font><b>FooTball</b><br><font face="Tahoma" size="-2">
+        </font><b>Schedules</b><br><font face="Tahoma,Arial" size="-2">
+        &nbsp; <a href="http://www.coacht.com/schedules/">By School</a><br>
+		&nbsp; <a href="http://www.coacht.com/schedules/scoreboard.cfm">By Date</a><br>
+		&nbsp; Add: <a href="http://www.coacht.com/schedules/add.cfm">Schedule</a> | <a href="http://www.coacht.com/schedules/addgame.cfm">Game</a><br>
+        &nbsp; <a href="http://www.coacht.com/rankings/">W/L Rankings</a><br><br>
+        </font><b>Baseball</b><br><font face="Tahoma,Arial" size="-2">
+        &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=2">Message Board</a><br>
+        &nbsp; <a href="http://www.coacht.com/schedules/scoreboard.cfm?sport=baseball">Scoreboard</a><br>
+        &nbsp; <a href="http://www.coacht.com/thepoll/?sport=Baseball">Fan Poll</a><br><br>
+        </font><b>Softball</b><br><font face="Tahoma,Arial" size="-2">
+        &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=3">Message Board</a><br>
+        &nbsp; <a href="http://www.coacht.com/schedules/scoreboard.cfm?sport=softball">Scoreboard</a><br>
+        &nbsp; <a href="http://www.coacht.com/thepoll/?sport=Softball">Fan Poll</a><br><br>
+        </font><b>Soccer</b><br><font face="Tahoma,Arial" size="-2">
+        &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=7">Message Board</a><br>
+        &nbsp; <a href="http://www.coacht.com/schedules/scoreboard.cfm?sport=Men's+Soccer">Scoreboard</a><br>
+        &nbsp; <a href="http://www.coacht.com/thepoll/?sport=Men's Soccer">Fan Poll</a><br><br>
+        </font><b>Basketball</b><br><font face="Tahoma,Arial" size="-2">
+        &nbsp; <a href="http://www.coacht.com/story.cfm?doc=14">Info Center</a><br>
+        &nbsp; Boards: <a href="http://www.coacht.com/boards/forum.cfm?FID=1">Boys</a> | <a href="http://www.coacht.com/boards/forum.cfm?FID=5">Girls</a><br>
+        &nbsp; <a href="http://www.coacht.com/schedules/scoreboard.cfm">Scoreboard</a><br>
+        &nbsp; <a href="http://www.coacht.com/thepoll/">Top 20 Fan Poll</a><br>
+        &nbsp; <a href="http://www.coacht.com/story.cfm?doc=2461">Gomab/TJ Poll</a><br>
+        &nbsp; <a href="http://www.coacht.com/schedules/sos.html">Strength of Schedule</a><br>
+        &nbsp; <a href="http://www.coacht.com/archive/">Story Index</a><br><br>
+				</font><b>Football</b><br><font face="Tahoma,Arial" size="-2">
         &nbsp; <a href="http://www.coacht.com/story.cfm?doc=57">Info Center</a><br>
         &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=6">Message Board</a><br>
         &nbsp; <a href="http://www.coacht.com/archive/index.cfm?Sport=Football&amp;BrowseDate=&amp;GrandDivision=&amp;Class=&amp;Search=&amp;Submit=Display+Results">Story Index</a><br><br>
-        </font><b>BaskeTball</b><br><font face="Tahoma" size="-2">
-        &nbsp; <a href="http://www.coacht.com/story.cfm?doc=14">Info Center</a><br>
-        &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=1">Boys Board</a><br>
-        &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=5">Girls Board</a><br>
-        &nbsp; <a href="http://www.coacht.com/archive/">Story Index</a><br>
-        &nbsp; <a href="http://www.coacht.com/schedules/">Schedules</a><br><br>
-        </font><b>Wrestling</b><br><font face="Tahoma" size="-2">
+<!--         </font><b>Wrestling</b><br><font face="Tahoma,Arial" size=-2>
         &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=12">Message Board</a><br>
-        &nbsp; <a href="http://www.coacht.com/archive/index.cfm?Sport=Wrestling&amp;BrowseDate=&amp;GrandDivision=&amp;Class=&amp;Search=&amp;Submit=Display+Results">Story Index</a><br><br>
-        </font><b>Volleyball</b><br><font face="Tahoma" size="-2">
-        &nbsp; <a href="http://www.coacht.com/boards/forum.cfm?FID=8">Message Board</a><br>
-        &nbsp; <a href="http://www.coacht.com/archive/index.cfm?Sport=Volleyball&amp;BrowseDate=&amp;GrandDivision=&amp;Class=&amp;Search=&amp;Submit=Display+Results">Story Index</a><br><br>
-        </font><b>SiTe Info</b><br><font face="Tahoma" size="-2">
+        &nbsp; <a href="http://www.coacht.com/archive/index.cfm?Sport=Wrestling&BrowseDate=&GrandDivision=&Class=&Search=&Submit=Display+Results">Story Index</a><br><br>!-->
+        </font><b>Site Info</b><br><font face="Tahoma,Arial" size="-2">
         &nbsp; <a href="http://www.coacht.com/links/">Links</a><br>
+				&nbsp; <b><a href="http://www.coacht.com/sitemap.cfm">Site Map</a></b><br>
         &nbsp; <a href="http://www.coacht.com/story.cfm?doc=37">Sponsorship Info</a><br>
         &nbsp; <a href="http://www.coacht.com/story.cfm?doc=36">Privacy Statement</a><br>
         &nbsp; <a href="mailto:coacht@coacht.com">Email CoachT</a><br>
@@ -128,18 +132,13 @@ This site gives users the following options for removing their information from 
   </tr>
 </tbody></table>
 <p>
-<table width="600" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr valign="top" align="center">
-  <td> <a href="http://www.coacht.com/adserve/click.cfm?id=2"><img src="http://www.coacht.com/ads/lfedbank-468.gif" border="0"></a> </td>
-</tr>
-</tbody></table>
+
 <table border="0" cellpadding="0" cellspacing="0" width="715">
   <tbody><tr valign="top"><!-- row 3 -->
    <td valign="center" height="19">&nbsp;<font face="Verdana, Arial" size="-2"><b>Send questions or comments to <a href="mailto:coacht@coacht.com">CoachT</a>.</b></font></td>
    <td rowspan="2"><img src="http://www.coacht.com/images/sparkfooter.gif" width="172" height="36" border="0"></td>
   </tr>
   <tr valign="top"><!-- row 4 -->
-   <td bgcolor="Black"><table width="538" border="0" cellpadding="2" cellspacing="0"><tbody><tr><td height="17"><font face="Verdana" size="-2" color="Silver"><b>&nbsp;© 2001 CoachT.com - All Rights Reserved</b></font></td></tr></tbody></table></td>
+   <td bgcolor="Black"><table width="538" border="0" cellpadding="2" cellspacing="0"><tbody><tr><td height="17"><font face="Verdana" size="-2" color="Silver"><b>&nbsp;© 2002 CoachT.com - All Rights Reserved</b></font></td></tr></tbody></table></td>
   </tr>
-</tbody></table>
-</p></body></html>
+</tbody></table></p></body></html>
