--- a/a/ag/agr/agriscape.com.html
+++ b/a/ag/agr/agriscape.com.html
@@ -1,8 +1,7 @@
-<!--The following is the downloaded HTML source of the agriscape.com privacy policy that was archived on 2000-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20000816190436id_/http%3A//agriscape.com/pp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the agriscape.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602124058id_/http%3A//www.agriscape.com/pp) for the most accurate reproduction.-->
 
-<html><head></head><body bgcolor="#ffffff"><hmtl><title>Agriscape Privacy Policy</title><center><table width="590"><tbody><tr><td><img src="../../images/new.jpg"></td><td>
-<a href="http://www.agriscape.com/cgi-bin/ads/ads.pl?banner=NonSSI;page=16189221325"><img border="" "0"="" src="http://www.agriscape.com/cgi-bin/ads/ads.pl?page=16189221325"></a></td></tr></tbody></table></center><p></p><center><table width="590"><tbody><tr><td><font size="2" face="arial, helvetica"><font size="2" face="arial, helvetica"><b>You are here: </b><a href="../">Home</a> &gt; Privacy Policy</font></font></td></tr></tbody></table></center><center><table width="590"><tbody><tr><td><font size="2" face="arial, helvetica"><font size="2" face="arial, helvetica">
+<html><head></head><body bgcolor="#ffffff"><hmtl><title>Agriscape Privacy Policy</title><center><table width="590"><tbody><tr><td><img src="../../images/logo.jpg"></td></tr></tbody></table></center><p></p><center><table width="590"><tbody><tr><td><font size="2" face="arial, helvetica"><font size="2" face="arial, helvetica"><b>You are here: </b><a href="../">Home</a> &gt; Privacy Policy</font></font></td></tr></tbody></table></center><center><table width="590"><tbody><tr><td><font size="2" face="arial, helvetica"><font size="2" face="arial, helvetica">
 <b><font face="Arial, Helvetica" size="4"></font></b><font face="Arial, Helvetica" size="4"></font><p align="CENTER"><font face="Arial, Helvetica" size="4"><b>Privacy Notice</b></font><br>
 <font face="Arial, Helvetica" size="2"> <br>
 </font></p><font face="Arial, Helvetica" size="2">
@@ -50,7 +49,7 @@
 </font>
 
 </font></font></td></tr></tbody></table></center>
-<p align="center"><font size="2" face="arial, helvetica">Copyright © 2000 Agriscape. All rights reserved.<br>
+<p align="center"><font size="2" face="arial, helvetica">Copyright © 2001 Vorras Corporation. All rights reserved.<br>
 Comments or Feedback? Email us at <a href="mailto:info@agriscape.com">info@agriscape.com</a>
 </font>
 </p></hmtl></body></html>
