osha.gov (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;education",
  "char_count": 4708,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.5,
  "homepage_snapshot_redirected_domain": "osha.gov",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020401102328id_/http://www.osha.gov/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020401102328id_/http%3A//osha.gov",
  "interval": "2002_A",
  "link_text": "Privacy and Security Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "dol.gov",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602135344id_/http%3A//www.dol.gov/dol/privacynotice.htm",
  "policy_title": "Privacy and Security Statement",
  "policy_url": "dol.gov/dol/privacynotice.htm",
  "sha1": "09e5d20f296b2018bcb77ece362bbccc0d071cf0",
  "simhash": 14854540271099990325,
  "simhash_updated": false,
  "site_hostname": "osha.gov",
  "site_url": "http://osha.gov",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602135344",
  "word_count": 775,
  "year": 2002
}

--- a/o/os/osh/osha.gov.html
+++ b/o/os/osh/osha.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the osha.gov privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217230226id_/http%3A//www.dol.gov/dol/privacynotice.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the osha.gov privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602135344id_/http%3A//www.dol.gov/dol/privacynotice.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//SoftQuad Software//DTD HoTMetaL PRO 6.0::19990601::extensions to HTML 4.0//EN" "hmpro6.dtd"><html><head> 
 	 <title>Privacy and Security Statement</title><link rel="STYLESHEET" href="/index.css"> 
@@ -11,7 +11,8 @@
       <td width="87" valign="BOTTOM"><a href="/index.htm"><img src="/images/header-seal-top.gif" align="LEFT" width="87" height="49" border="0" hspace="0" vspace="0" alt="DOL Seal - Link to DOL Home Page"></a></td> 
       <td><!-- end header-start.shtm -->
 
-<div><b><font color="#003399" class="headerbig">U.S. Department of Labor</font></b></div>
+	 <div><b><font color="#003399" class="headerbig">U.S. Department of
+		Labor</font></b></div>
 <!-- begin header-mid.shtm --></td> 
       <td align="RIGHT" valign="BOTTOM"><img src="/images/header-montage.jpg" align="RIGHT" width="363" height="49" border="0" hspace="0" vspace="0" alt="Photos representing the workforce - Digital Imagery© copyright 2001 PhotoDisc, Inc.   "></td> 
     </tr> 
@@ -21,7 +22,7 @@
       <td bgcolor="#FFCC00" width="87" valign="TOP"><a href="/index.htm"><img src="/images/header-seal-bottom.gif" align="LEFT" width="87" height="31" border="0" hspace="0" vspace="0" alt="DOL Seal - Link to DOL Home Page"></a></td> 
       <td align="LEFT" bgcolor="#FFCC00" width="210"><!-- end header-mid.shtm -->
 
-<div><i><b><font color="#003399" style="font-size: 14pt">www.dol.gov</font></b></i></div>
+	 <div><i><b><font color="#003399" style="font-size: 14pt">www.dol.gov</font></b></i></div>
 <!-- begin header-end.shtm --></td> 
       <td align="RIGHT" valign="BOTTOM" bgcolor="#FFCC00"><img src="/images/curve-bl-bot.gif" align="RIGHT" width="15" height="18" border="0" hspace="0" vspace="0" alt=" "></td> 
       <td bgcolor="#003399" align="RIGHT" valign="MIDDLE" width="600"> <a href="#content"><font color="#003399" class="skip" style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 1pt">[skip navigational links]</font></a><a href="/dol/faqs/index.htm"><b><font style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 8pt" color="#FFFFFF">Frequently Asked Questions</font></b></a><b><font style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 8pt" color="#FFFFFF">&nbsp;&nbsp;|&nbsp;&nbsp;</font></b><a href="/dol/siteindex.htm"><b><font style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 8pt" color="#FFFFFF">Search&nbsp;/&nbsp;A-Z&nbsp;Index</font></b></a> </td> 
@@ -36,7 +37,7 @@
       <td valign="TOP" align="LEFT" height="11"><img src="/images/shadow-bot-bl-full.gif" alt=" " width="770" height="11" border="0" hspace="0" vspace="0" align="RIGHT"></td> 
     </tr> 
     <tr> 
-      <td valign="TOP" align="RIGHT" bgcolor="#3366CC" height="10"><font class="textnorm" color="#FFFFFF">Find It!:</font>&nbsp;&nbsp;<a href="/dol/topic/index.htm"><font class="textsm" color="#FFFFFF">By Topic</font></a><font color="#FFFFFF"> | </font><a href="/dol/audience/index.htm"><font class="textsm" color="#FFFFFF">By Audience</font></a><font color="#FFFFFF"> | </font><a href="/dol/top-requested.htm"><font class="textsm" color="#FFFFFF">By Top 20 Requested Items</font></a><font color="#FFFFFF"> | </font><a href="/libraryforms/"><font class="textsm" color="#FFFFFF">By Form</font></a><font color="#FFFFFF"> | </font><a href="/dol/organization.htm"><font class="textsm" color="#FFFFFF">By Organization</font></a><font color="#FFFFFF"> | </font><a href="/dol/location.htm"><font class="textsm" color="#FFFFFF">By Location</font></a>&nbsp;&nbsp;&nbsp;</td> 
+      <td valign="TOP" align="RIGHT" bgcolor="#3366CC" height="10"><font class="textnorm" color="#FFFFCC">Find It!:</font>&nbsp;&nbsp;<a href="/dol/topic/index.htm"><font class="textsm" color="#FFFFCC">By Topic</font></a><font color="#FFFFCC"> | </font><a href="/dol/audience/index.htm"><font class="textsm" color="#FFFFCC">By Audience</font></a><font color="#FFFFCC"> | </font><a href="/dol/top-requested.htm"><font class="textsm" color="#FFFFCC">By Top 20 Requested Items</font></a><font color="#FFFFCC"> | </font><a href="/libraryforms/"><font class="textsm" color="#FFFFCC">By Form</font></a><font color="#FFFFCC"> | </font><a href="/dol/organization.htm"><font class="textsm" color="#FFFFCC">By Organization</font></a><font color="#FFFFCC"> | </font><a href="/dol/location.htm"><font class="textsm" color="#FFFFCC">By Location</font></a>&nbsp;&nbsp;&nbsp;</td> 
     </tr>
     <tr>
       <td valign="TOP" align="RIGHT" bgcolor="#3366CC" height="10">&nbsp;</td>
@@ -49,7 +50,7 @@
 
 	 <div><font class="crumb">
 
-<b>December&nbsp;17,&nbsp;2001
+<b>June&nbsp;2,&nbsp;2002
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <!-- START CRUMB TRAIL *************************************************** -->
@@ -76,14 +77,14 @@
 		you choose to provide such information to us. The information we receive
 		depends upon what you do when visiting our site.</p> 
 	 <p><em>If you visit our site to read or download information, we collect
-		and store the following information:</em></p>
+		and store the following information:</em></p> 
 	 <ul> 
 		<li>The name of the domain from which you access the Internet (for
 		  example, dol.gov, if you are connecting from the Department of Labor's computer
 		  account).</li> 
 		<li>The date and time you access our site.</li> 
 		<li>The Internet address of the website from which you linked directly to
-		  our site.</li>
+		  our site.</li> 
 	 </ul> 
 	 <p>The above information is used by software programs on our website to
 		create summary statistics which allow us to assess the number of visitors to
@@ -98,19 +99,18 @@
 		solely for responding to requests for information or records. We may forward
 		your E-mail to other Government employees who are better able to respond to
 		you. Should you wish to file a request under FOIA, instructions are provided
-		at: <a href="/dol/foia/main.htm">http://www.dol.gov/dol/public/foia/main.htm</a>
-		</p> 
+		at: <a href="/dol/foia/main.htm">http://www.dol.gov/dol/foia/main.htm</a> </p> 
 	 <p><em>If you link to other sites outside DOL:</em></p> 
 	 <p>Our Website has many links to other sites. When you link to any of these
 		sites, you are no longer on our site and are subject to the privacy policy of
 		the new site. </p> 
-	 <p> <i>Cookie Use Notice</i> </p>
-	 <p> </p>
+	 <p> <i>Cookie Use Notice</i> </p> 
+	 <p> </p> 
 	 <p>On a limited number of its web pages, the U.S. Department of Labor
 		employs "cookies" to provide better service to its customers. The Department
 		does not use cookies to collect any personally identifying information from
 		users or to track user activities beyond our web site. The Department does not
-		maintain copies of cookies on our web site after you leave our web site. </p>
+		maintain copies of cookies on our web site after you leave our web site. </p> 
 	 <p> Cookies are small pieces of temporary data that are exchanged between a
 		web site and a user's computer which enable a "session", or "dialog", to be
 		established between the two machines. With the session established, the
@@ -118,7 +118,7 @@
 		the information you want) and help you traverse our web pages in the most
 		efficient and effective manner possible. The session is often broken when the
 		Department's server does not receive further requests from your computer or you
-		simply exit your browser. </p>
+		simply exit your browser. </p> 
 	 <p> The Department limits its use of cookies to "session cookies"…
 		types of cookies that are temporarily stored in your computer's memory. Session
 		cookies are normally deleted from a user's computer when the user logs off the
@@ -131,7 +131,7 @@
 		the user's browser when revisiting the DOL web site. In the event a cookie is
 		found on your workstation which was issued from a Department of Labor web site,
 		you may remove it without adversely affecting your future visits to our web
-		site. </p>
+		site. </p> 
 	 <p> </p><hr> 
 	 <p>For security purposes and to ensure that this service remains available
 		to all users, our website also employs software programs to monitor network
@@ -148,7 +148,7 @@
 		  <td valign="TOP" align="LEFT" bgcolor="#3366CC" width="149"> 
 			 <!-- begin sub-global.shtm --><table border="0" width="150"> 
 		<tbody><tr> 
-		  <td><a href="/dol/regs/main.htm"><b><font style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 10pt" color="#FFCC00">Laws &amp; Regulations</font></b></a></td> 
+		  <td><a href="/dol/regs/main.htm"><b><font style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 10pt" color="#FFCC00">Compliance Assistance</font></b></a></td> 
 		</tr> 
 		<tr> 
 		  <td><br><a href="/dol/stats.htm"><b><font style="font-family: Verdana, Arial, Helvetica, Sans-serif; font-size: 10pt" color="#FFCC00">Statistics, Research &amp; Publications </font></b></a></td> 
@@ -202,11 +202,5 @@
 	 </tbody></table><!-- end main-end.shtm --> 
 
   
-
-
-
-
-
-
 
 </body></html>
