--- a/s/su/suc/successories.com.html
+++ b/s/su/suc/successories.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the successories.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211151117id_/http%3A//www.successories.com/customer/cs_privacysecurity.asp%3Fnav_id_store%3D1%26nav_id_top%3D9%26nav_id_left%3D%26group_id%3D%26theme_id%3D%26nav_id_browse%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the successories.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602135624id_/http%3A//www.successories.com/customer/cs_privacysecurity.asp%3Fnav_id_store%3D1%26nav_id_top%3D9%26nav_id_left%3D%26group_id%3D%26theme_id%3D%26nav_id_browse%3D) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 		<!-- START OF WEBTRENDS LIVE TAG -->
@@ -54,7 +54,7 @@ document.write('<A TARGET="_blank" HREF="https://www.webtrendslive.com/redirect.
 document.write('<IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="https://statse.webtrendslive.com/S0014-01-3-6-85963-58224/button3.asp?'+W+'">');
 document.write('</A>');
 //-->
-</script></head><body bgcolor="#CCCC99" text="#000000" link="#000099" vlink="#666666" alink="#000000" topmargin="15" marginheight="15" marginwidth="0"><a target="_blank" href="https://www.webtrendslive.com/redirect.asp?siteID=58224"><img border="0" width="1" height="1" src="https://statse.webtrendslive.com/S0014-01-3-6-85963-58224/button3.asp?tagver=3&amp;SiteId=58224&amp;Sid=0014-01-3-6-85963-58224&amp;Tz=-500&amp;firstwkday=sunday&amp;Edition=ecommerce&amp;Button=&amp;server=&amp;order=&amp;Group=&amp;browserDate=Thu%20Jan%2030%202020%2011%3A22%3A38%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=&amp;url=https://web.archive.org/web/20011211151117id_/http%3A//www.successories.com/customer/cs_privacysecurity.asp%3Fnav_id_store%3D1%26nav_id_top%3D9%26nav_id_left%3D%26group_id%3D%26theme_id%3D%26nav_id_browse%3D&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
+</script></head><body bgcolor="#CCCC99" text="#000000" link="#000099" vlink="#666666" alink="#000000" topmargin="15" marginheight="15" marginwidth="0"><a target="_blank" href="https://www.webtrendslive.com/redirect.asp?siteID=58224"><img border="0" width="1" height="1" src="https://statse.webtrendslive.com/S0014-01-3-6-85963-58224/button3.asp?tagver=3&amp;SiteId=58224&amp;Sid=0014-01-3-6-85963-58224&amp;Tz=-500&amp;firstwkday=sunday&amp;Edition=ecommerce&amp;Button=&amp;server=&amp;order=&amp;Group=&amp;browserDate=Thu%20Jan%2030%202020%2011%3A22%3A36%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=&amp;url=https://web.archive.org/web/20020602135624id_/http%3A//www.successories.com/customer/cs_privacysecurity.asp%3Fnav_id_store%3D1%26nav_id_top%3D9%26nav_id_left%3D%26group_id%3D%26theme_id%3D%26nav_id_browse%3D&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
 
 <noscript>
 <A TARGET="_blank" HREF="https://www.webtrendslive.com/redirect.asp?siteID=58224">
@@ -108,6 +108,10 @@ document.write('</A>');
 			<tbody><tr valign="top">
 			<td align="left">
 			<img src="/assets/images/spacer.gif" width="166" height="5" border="0" alt=""></td>
+			</tr>
+			<!-- Place Catalog Order -->
+			<tr valign="top">
+			<td><a href="http://www.successories.com/eob.asp?nav_id_store=1&amp;nav_id_top=&amp;nav_id_left=5&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><img src="/assets/nav_images/catalogquickorder.gif" width="166" height="28" border="0" alt="Catalog Quick Order"></a><br><img src="/assets/images/spacer.gif" width="1" height="8" border="0" alt=""><br></td>
 			</tr>
 			<!-- Product -->
 			<tr valign="top">
@@ -378,25 +382,28 @@ document.write('</A>');
 			<td align="left">
 			<img src="/assets/images/spacer.gif" width="2" height="5" border="0" alt=""></td>
 			</tr>
-			<!-- Place Catalog Order -->
-			<tr valign="top">
-			<td><img src="/assets/images/spacer.gif" width="1" height="8" border="0" alt=""><br><a href="http://www.successories.com/placecatorder.asp?nav_id_store=1&amp;nav_id_top=&amp;nav_id_left=5&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><img src="/assets/nav_images/l_catord.gif" width="166" height="21" border="0" alt="Theme"></a><br></td>
-			</tr>
-			<form method="post" name="catalogorder" action="http://www.successories.com/execute/xt_catalogorders.asp?nav_id_store=&amp;nav_id_top=&amp;nav_id_left=5&amp;group_id=&amp;theme_id=&amp;nav_id_browse="></form>	
-			<tr valign="top">
-			<td height="21">
-			<img src="/assets/images/spacer.gif" width="21" height="1" border="0" alt=""><font face="Helvetica, Arial" size="-2">Enter your item # and click<br>
-			<img src="/assets/images/spacer.gif" width="21" height="1" border="0" alt="">"Submit".</font></td>
-			</tr>
-			<tr valign="top">
-			<td height="21"><img src="/assets/images/spacer.gif" width="21" height="1" border="0" alt=""><input type="text" size="11" maxlength="15" id="sku" name="sku"><input type="IMAGE" src="/assets/nav_images/l_submit.gif" width="43" height="9" border="0" alt="" id="IMAGE2" name="IMAGE2"></td>
-			</tr>
 			
+			<!--<FORM METHOD="post" NAME="catalogorder" ACTION="http://www.successories.com/execute/xt_catalogorders.asp?nav_id_store=&nav_id_top=&nav_id_left=5&group_id=&theme_id=&nav_id_browse=">	
+			<TR VALIGN="top">
+			<TD HEIGHT="21">
+			<IMG SRC="/assets/images/spacer.gif" WIDTH="21" HEIGHT="1" BORDER="0" ALT=""><FONT FACE="Helvetica, Arial" SIZE="-2">Enter your item # and click<BR>
+			<IMG SRC="/assets/images/spacer.gif" WIDTH="21" HEIGHT="1" BORDER="0" ALT="">&quot;Submit&quot;.</FONT></TD>
+			</TR>
+			<TR VALIGN="top">
+			<TD HEIGHT="21"><IMG SRC="/assets/images/spacer.gif" WIDTH="21" HEIGHT="1" BORDER="0" ALT=""><INPUT TYPE="text" SIZE="11" MAXLENGTH="15" id="sku" name="sku"><INPUT TYPE="IMAGE" SRC="/assets/nav_images/l_submit.gif" WIDTH="43" HEIGHT="9" BORDER="0" ALT="" id=IMAGE2 name=IMAGE2></TD>
+			</TR>
+			</FORM>-->
 			<!-- Outlet Center -->
 			<tr valign="top">
 			<td align="left">
 			<img src="/assets/images/spacer.gif" width="2" height="15" border="0" alt=""><br>
 			<a href="http://www.successories.com/outlet_center/default.asp?nav_id_store=2&amp;nav_id_top=&amp;nav_id_left=1&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><img src="/assets/nav_images/l_outletbttn.gif" width="166" height="26" border="0" alt="Outlet Center"></a></td>
+			</tr>
+			<!-- motivational matters -->
+			<tr valign="top">
+			<td align="left">
+			<img src="/assets/images/spacer.gif" width="2" height="15" border="0" alt=""><br>
+			<a href="http://www.successoriesonline.com/mmatters" target="new"><img src="/assets/images/mmatters_button.gif" width="166" height="40" border="0" alt="Motivational Matters"></a></td>
 			</tr>
 			</tbody></table>
 	</td>
@@ -496,7 +503,7 @@ document.write('</A>');
 						<a href="http://www.successories.com/default.asp?nav_id_store=1&amp;nav_id_top=1&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Home</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/search.asp?nav_id_store=1&amp;nav_id_top=3&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Search</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/checkout/basket.asp?nav_id_store=1&amp;nav_id_top=4&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Shopping Cart</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/request_catalog.asp?nav_id_store=1&amp;nav_id_top=5&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Free Catalog</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/store_locations.asp?nav_id_store=1&amp;nav_id_top=7&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Stores</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/about_us/au_intro.asp?nav_id_store=1&amp;nav_id_top=8&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">About Us</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/customer/cs_intro.asp?nav_id_store=1&amp;nav_id_top=9&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Customer Services</font></a><br>
 						<a href="http://www.successories.com/about_us/au_contact.asp?nav_id_store=1&amp;nav_id_top=8&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Contact Us</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/customer/cs_orderinfo.asp?nav_id_store=1&amp;nav_id_top=9&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Ordering Info</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.successories.com/customer/cs_privacysecurity.asp?nav_id_store=1&amp;nav_id_top=9&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse="><font face="Helvetica, Arial" size="-2">Privacy &amp; Security</font></a><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt="">|<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><a href="http://www.corporate-ir.net/ireye/ir_site.zhtml?ticker=SCES&amp;script=2100"><font face="Helvetica, Arial" size="-2">Investor Relations</font></a>
 						<font face="Helvetica, Arial" size="-2">
-						<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><br><br>©2001 Successories, Inc.  All rights reserved. Any reproduction, modification<br>
+						<img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""><br><br>©2002 Successories, Inc.  All rights reserved. Any reproduction, modification<br>
 						or use of the materials on this site is prohibited. <a href="http://www.successories.com/about_us/au_legal.asp?nav_id_store=&amp;nav_id_top=8&amp;nav_id_left=&amp;group_id=&amp;theme_id=&amp;nav_id_browse=">Legal Notice</a><br><br>
 						To order or receive assistance call (800) 535-2773
 						</font><img src="/assets/images/spacer.gif" width="3" height="1" border="0" alt=""></td>
@@ -511,5 +518,5 @@ document.write('</A>');
 		</center>
 	
 
-<!-- 10.1.24.159 -->
+<!-- 10.1.24.160 -->
 </body></html>
