--- a/m/me/mex/mexconnect.com.html
+++ b/m/me/mex/mexconnect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mexconnect.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218001302id_/http%3A//www.mexconnect.com/mxcprivacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mexconnect.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602135926id_/http%3A//mexconnect.com/mxcprivacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Pragma" content="no-cache">
@@ -101,7 +101,7 @@ Or you can reach us by telephone at +52 (376) 6 - 2267</address></b></center><br
 </map>
 <img src="http://www.mexconnect.com/masthead_bar.gif" align="middle" width="620" height="30" border="0" usemap="#barmap">
 <br><br>
-<a href="http://www.mexconnect.com/mex_/mxccopy.htm"><b>© Mexico Connect 1996-2001</b></a>
+<a href="http://www.mexconnect.com/mex_/mxccopy.htm"><b>© Mexico Connect 1996-2002</b></a>
 <!-- END FOOTER AREA -->
 </center>
 
