--- a/d/do/dot/doteasy.com.html
+++ b/d/do/dot/doteasy.com.html
@@ -1,11 +1,10 @@
-<!--The following is the downloaded HTML source of the doteasy.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201053037id_/http%3A//www.doteasy.com/Terms/index.cfm%3FT%3DPP) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the doteasy.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602140858id_/http%3A//www.doteasy.com/Terms/index.cfm%3FT%3DPP) for the most accurate reproduction.-->
 
 <html><head>
 	
 	<meta name="keywords" content="bannerless hosting, bannerless website hosting, free, free homepage, free web hosting, free website, hosting, web host, peo, gratis hemsida, gratis espace, fri hjemmeside, hébergement web gratuit">
 	<meta name="description" content="Doteasy provides domain registration &amp; bannerless free web hosting to individuals, small businesses, free webspace, no ad banners, no membership fees, not subdomains, unlimited e-mail accounts, unlimited traffic...">
-
 	
 	
 	
@@ -79,11 +78,18 @@ PRE, .pre { font-family: courier new, monospace }
 
 
 
+
+<table cellspacing="0" cellpadding="0" border="0" width="611"><tbody><tr><td>
+<table cellspacing="0" cellpadding="0" border="0" width="100%"><tbody><tr><td>
+
+
+
 	
+
 
 <div align="center" style="margin-top: 25px;">
 
-<table cellspacing="0" cellpadding="0" border="0" width="611"><tbody><tr><td>
+<table cellspacing="0" cellpadding="0" border="0" width="100%"><tbody><tr><td>
 
 
 	
@@ -135,11 +141,11 @@ Canada</pre>
 
 
 
+</div></td>
 
 
 
-
-
+</tr></tbody></table>
 
 
 
@@ -260,7 +266,7 @@ Canada</pre>
         
     
 
-<table cellspacing="0" cellpadding="0" border="0" width="611">
+<table cellspacing="0" cellpadding="0" border="0" width="100%">
 
 <tbody><tr><td height="22"></td></tr>
 
@@ -270,7 +276,7 @@ Canada</pre>
 <tr>
 <td><small class="smallest" style="color:#999999">
 	
-	Copyright <img src="/Images/copyright.gif" width="7" height="7" border="0"> 2000-2001 Doteasy Technology Inc. All Rights Reserved.<br>All other trademarks and copyrights are the property of their respective holders.<br><br>
+	Copyright <img src="/Images/copyright.gif" width="7" height="7" border="0"> 2000-2002 Doteasy Technology Inc. All Rights Reserved.<br>All other trademarks and copyrights are the property of their respective holders.<br><br>
 	<a href="http://www.doteasy.com/Terms/index.cfm?T=DRA">Domain Registration Agreement</a> |
 	<a href="http://www.doteasy.com/Terms/index.cfm?T=TAC">Terms &amp; Conditions</a> |
 	<a href="http://www.doteasy.com/Terms/index.cfm?T=UDN">Uniform Domain-Name Dispute-Resolution Policy</a> |
@@ -282,6 +288,12 @@ Canada</pre>
 <tr><td height="30"></td></tr>
 </tbody></table>
 
+</td></tr></tbody></table>
 
 
-</div></center></body></html>
+
+
+
+
+
+</center></body></html>
