marriagebuilders.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 739,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.05,
  "homepage_snapshot_redirected_domain": "marriagebuilders.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330114039id_/http://marriagebuilders.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330114039id_/http%3A//marriagebuilders.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "marriagebuilders.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602141930id_/http%3A//www.marriagebuilders.com/graphic/mbi051_priv.html",
  "policy_title": "Privacy Policy",
  "policy_url": "marriagebuilders.com/graphic/mbi051_priv.html",
  "sha1": "a7318ee028c9cb6c4c1d317a8045bc2595041a36",
  "simhash": 6207373885059864482,
  "simhash_updated": true,
  "site_hostname": "marriagebuilders.com",
  "site_url": "http://marriagebuilders.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602141930",
  "word_count": 120,
  "year": 2002
}

--- a/m/ma/mar/marriagebuilders.com.html
+++ b/m/ma/mar/marriagebuilders.com.html
@@ -1,35 +1,8 @@
-<!--The following is the downloaded HTML source of the marriagebuilders.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212080024id_/http%3A//www.marriagebuilders.com/graphic/mbi051_priv.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marriagebuilders.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602141930id_/http%3A//www.marriagebuilders.com/graphic/mbi051_priv.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
-<script language="JavaScript">
-<!-- Begin
-closetime = 0; // Close window after __ number of seconds?
-// 0 = do not close, anything else = number of seconds
 
-function Start(URL, WIDTH, HEIGHT) {
-windowprops = "left=50,top=50,width=" + WIDTH + ",height=" + HEIGHT;
-preview = window.open(URL, "preview", windowprops);
-if (closetime) setTimeout("preview.close();", closetime*1000);
-}
-
-function doPopup() {
-url = "http://www.marriagebuilders.com/graphic/popmbn-sub.html";
-width = 240;  // width of window in pixels
-height = 460; // height of window in pixels
-delay = 4;    // time in seconds before popup opens
-timer = setTimeout("Start(url, width, height)", delay*1000);
-}
-//  End -->
-</script>
-
-<!-- 
-***********************************************************************************************
-Designed and Coded By: Innovative Software Designs (http://www.isd.net) for Marriage Builders
-Date: 05/07/01
-For more information contact: info@marriagebuilders.com
-***********************************************************************************************
- -->
 
 
 
@@ -40,6 +13,10 @@ For more information contact: info@marriagebuilders.com
 
 	
 	
+
+	<title>Privacy Policy</title>
+	<meta name="description" content="">
+	<meta name="Keywords" content="">
 
 
 <script language="JavaScript">
@@ -110,10 +87,6 @@ A.redlinkul:hover { text-decoration : underline; color : F43429;}
 
 </style>
 
-
-	<title>Privacy Policy</title>
-
-
 </head>
 
 <body bgcolor="#3E425F" link="" alink="" vlink="" marginheight="5" marginwidth="5" leftmargin="5" topmargin="5">
@@ -145,7 +118,7 @@ x = Math.random();
 document.write('<a href="/ca/redirect.cgi/'+x+'?REGION=button-r">'); 
 document.write('<img src="/ca/getimage.cgi/'+x+'?REGION=button-r" '); 
 document.write(' width="120" height="60" border="0"></a>'); 
-</script><a href="/ca/redirect.cgi/0.7276268467702083?REGION=button-r"><img src="/ca/getimage.cgi/0.7276268467702083?REGION=button-r" width="120" height="60" border="0"></a></td>
+</script><a href="/ca/redirect.cgi/0.59985490635362?REGION=button-r"><img src="/ca/getimage.cgi/0.59985490635362?REGION=button-r" width="120" height="60" border="0"></a></td>
     </tr>
 	<tr>
      <td align="middle" valign="middle"><img src="http://www.marriagebuilders.com/graphics/header_bottom.gif" height="5" width="120" alt="" border="0"></td>
@@ -274,7 +247,7 @@ x = Math.random();
 document.write('<a href="/ca/redirect.cgi/'+x+'?REGION=button-l">'); 
 document.write('<img src="/ca/getimage.cgi/'+x+'?REGION=button-l" '); 
 document.write(' width="120" height="60" border="0"></a>');
-</script><a href="/ca/redirect.cgi/0.7161838315779891?REGION=button-l"><img src="/ca/getimage.cgi/0.7161838315779891?REGION=button-l" width="120" height="60" border="0"></a><br><!--End of sub links --></font></td>
+</script><a href="/ca/redirect.cgi/0.38675159185677743?REGION=button-l"><img src="/ca/getimage.cgi/0.38675159185677743?REGION=button-l" width="120" height="60" border="0"></a><br><!--End of sub links --></font></td>
   <td valign="top">
    <table cellpadding="0" cellspacing="0" border="0" width="100%">
     <tbody><tr>
@@ -303,7 +276,7 @@ web site, but we do not review information at the personal level,
 only the aggregate. 
 </p><p>
 Please note that the only information automatically logged by 
-<a href="/index.html">Marriage Builders</a> 
+<a href="/index.html">Marriage Builders<sup>®</sup></a> 
 is a user's IP address. <i>IP information in no way identifies the 
 user, simply the Internet Service Provider.</i>
 </p><p>
@@ -387,7 +360,7 @@ Thank you for visiting.
   </td>
  </tr>
  <tr>
-  <td align="center" valign="bottom"><font face="Arial, Helvetica" size="1" color="9999BB">© 1995-2001 Marriage Builders, Inc. All rights reserved.</font></td>
+  <td align="center" valign="bottom"><font face="Arial, Helvetica" size="1" color="9999BB">© 1995-2002 Marriage Builders, Inc. <a class="whitelink" href="http://www.marriagebuilders.com/graphic/mbi0001_copy.html">All rights reserved.</a></font></td>
  </tr>
 </tbody></table>
 <!-- End of Footer Section -->
