faucet.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 1872,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.04,
  "homepage_snapshot_redirected_domain": "faucet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328015915id_/http://www.faucet.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328015915id_/http%3A//faucet.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "faucet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602142854id_/http%3A//www.faucet.com/fc_ppolicy.htm",
  "policy_title": "Faucet.com - Privacy Policy",
  "policy_url": "faucet.com/fc_ppolicy.htm",
  "sha1": "32cf48be2c3f684886075e21c606fc42223e4f64",
  "simhash": 12360265982028675111,
  "simhash_updated": true,
  "site_hostname": "faucet.com",
  "site_url": "http://faucet.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602142854",
  "word_count": 294,
  "year": 2002
}

--- a/f/fa/fau/faucet.com.html
+++ b/f/fa/fau/faucet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the faucet.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201202350id_/http%3A//www.faucet.com/fc_ppolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the faucet.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602142854id_/http%3A//www.faucet.com/fc_ppolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Faucet.com - Privacy Policy</title>
@@ -13,7 +13,56 @@
 
 <body bgcolor="#ffffff" text="#000000" link="#0033CC" vlink="#003399" alink="#CC0066">
 
-<script language="JavaScript" src="/sis-bin/fcom_header.js"></script>
+<script language="JavaScript" src="/sis-bin/fcom_header.js"></script><!-- ### start fcom_header.html ### -->
+
+<div align="center">
+<center>
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
+<tbody><tr>
+	<td align="center" class="headLogo">
+	<table width="750" cellspacing="0" cellpadding="0" border="0">
+	<tbody><tr>
+		<td width="750" colspan="2">
+		<table width="750" cellspacing="0" cellpadding="0" border="0">
+			<tbody><tr>
+				
+				
+			</tr>
+			<tr>
+ <td class="headLogo" width="200" align="left" rowspan="2"><a href="/index.html"><img src="/images/fcom_hf/fcom_logo.gif" border="0" width="190" height="50"></a></td>
+ <td class="headcall" align="right" valign="bottom" colspan="5" width="550"><img src="/images/fcom_hf/fcom_call_us.gif" border="0" height="25" align="right"></td>
+ 
+ </tr>
+ <tr align="right">
+ <td width="27"><img src="/images/fcom_hf/trans.gif" height="9" width="24"></td>
+ <td width="120" height="24" class="headLogo" align="center" valign="middle" background="/images/fcom_hf/fcom_kit_tab.gif"><a href="https://web.archive.org/web/20031008103508/http://store.faucet.com/cgi-bin/fcom/scan/fi=ecat/st=sql/co=yes/sf=type/se=residential/su=no/ml=25/sf=supercat/se=kitchen/sf=manufacturer/se=1/rf=id,type,supercat,category,manufacturer/sp=ecategories/tf=display_order/to=n"><font class="sbtext">Kitchen Products</font></a><br><img src="/images/fcom_hf/clear_dot.gif" border="0" height="2"></td>
+ <td width="130" height="24" class="headLogo" align="center" valign="middle" background="/images/fcom_hf/fcom_bath_tab.gif"><a href="https://web.archive.org/web/20031008103508/http://store.faucet.com/cgi-bin/fcom/scan/fi=ecat/st=sql/co=yes/sf=type/se=residential/su=no/ml=25/sf=supercat/se=bath/sf=manufacturer/se=1/rf=id,type,supercat,category,manufacturer/sp=ecategories/tf=display_order/to=n"><font class="sbtext">Bathroom Products</font></a><br><img src="/images/fcom_hf/clear_dot.gif" border="0" height="2"></td>
+ <td width="140" height="24" class="headLogo" align="center" valign="middle" background="/images/fcom_hf/fcom_hardware_tab.gif"><a href="https://web.archive.org/web/20031008103508/http://store.faucet.com/cgi-bin/fcom/scan/fi=ecat/st=sql/co=yes/sf=type/se=residential/su=no/ml=25/sf=supercat/se=hardware/sf=manufacturer/se=1/rf=id,type,supercat,category,manufacturer/sp=ecategories/tf=display_order/to=n"><font class="sbtext">Decorative Hardware</font></a><br><img src="/images/fcom_hf/clear_dot.gif" border="0" height="2"></td>
+ <td width="127" height="24" class="headLogo" align="center" valign="middle" background="/images/fcom_hf/fcom_light_tab.gif"><a href="javascript:TransitionPopUp('http://www.lightingshowplace.com')"><font class="sbtext">Decorative Lighting</font></a><br><img src="/images/fcom_hf/clear_dot.gif" border="0" height="2"></td>
+	</tr>
+       </tbody></table>
+      </td>
+     </tr>
+    </tbody></table>
+   </td>
+  </tr>
+  <tr>
+	<td class="headMenu" align="center">
+	<table width="750" cellspacing="0" cellpadding="0" border="0">
+	<tbody><tr>
+	<td class="headMenu" width="300" height="23">Your Kitchen &amp; Bath Fixture Source</td>
+	<td class="headMenu" align="right" width="450">
+	<a href="/index.html" class="headMenu"><b>Home</b></a>&nbsp;
+ </td>
+	</tr>
+	</tbody></table>
+	</td>
+</tr>
+</tbody></table>
+</center>
+</div>
+<!-- ### end fcom_header.html ### -->
+
 <br>
 <script language="JavaScript" src="/sis-bin/fcom_side_top.js"></script>
 
@@ -86,8 +135,21 @@
 
 <script language="JavaScript" src="/sis-bin/fcom_side_bot.js"></script>
 <br>
-<script language="JavaScript" src="/sis-bin/fcom_footer.js"></script>
+<script language="JavaScript" src="/sis-bin/fcom_footer.js"></script><!-- ### start fcom_footer.html ### --><div align="center">
+<center>
+<br>
+<img border="0" src="/images/fcom_hf/fcom_line.gif"><br>
+<br>
+<a href="https://web.archive.org/web/20031203202610/http://store.faucet.com/cgi-bin/fcom/fcom/index"><font class="sbtext">Home</font></a> | 
+<a href="https://web.archive.org/web/20031203202610/http://store.faucet.com/cgi-bin/fcom/gen_about?;Faucet.com|;"><font class="sbtext">About Us</font></a> | 
+<a href="https://web.archive.org/web/20031203202610/http://store.faucet.com/cgi-bin/fcom/gen_contact?;Faucet.com|;"><font class="sbtext">Contact Us</font></a> | 
+<a href="https://web.archive.org/web/20031203202610/http://store.faucet.com/cgi-bin/fcom/gen_custserv?;Faucet.com|;"><font class="sbtext">Customer Service</font></a> | 
+<a href="https://web.archive.org/web/20031203202610/http://store.faucet.com/cgi-bin/fcom/gen_policies?;Faucet.com|;"><font class="sbtext">Policies</font></a> | 
+<a href="https://web.archive.org/web/20031203202610/http://store.faucet.com/cgi-bin/fcom/gen_ppolicy?;Faucet.com|;"><font class="sbtext">Privacy Policy</font></a><br> 
+<font size="1">© 1994-2003 All Rights Reserved. Powered by DPS Inc.</font><br><br>
+<a href="https://web.archive.org/web/20031203202610/http://www.bizrate.com/ratings_guide/cust_reviews__mid--59354.html" target="_blank"><img src="https://web.archive.org/web/20031203202610/http://medals.bizrate.com/medals/dynamic/small/59354_medal.gif" alt="Click here to see ratings" width="113" height="50" align="top" border="0" target="_blank"></a><!-- END: BizRate.com Medal (113x50 pixels) -->
+<!-- ### end fcom_footer.html ### -->
 
 
 
-</body></html>
+</center></div></body></html>
